--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8">
     <title>HealthRay</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <link rel="stylesheet" href="static/css/style.css">
-    <link rel="stylesheet" href="static/css/main-color.css" id="colors">
-    <link rel="stylesheet" href="static/css/custom.css">
+    <link rel="stylesheet" href="static/css/style.min.css">
+    <link rel="stylesheet" href="static/css/main-color.min.css" id="colors">
+    <link rel="stylesheet" href="static/css/custom.min.css">
   </head>
   <body>
     <div id="app"></div>
